--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -14,3 +14,15 @@
     font-size: 32px;
 }
 
+.service-item:hover {
+    transform: translateY(-25px);
+}
+
+
+@media only screen and (max-width: 768px) and (min-width: 375px){
+    .Services {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+  }
