--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,19 +7,21 @@
     height: 70px;
     background: var(--card-bg-01);
     position: fixed;
-    z-index:999;
-    margin-bottom: 200px;
+    z-index:999;  
 }
 
 .nav-wrapper{
     display: flex;
-    width: 100%;
     align-items: center;
     justify-content: space-between;
     padding: 15px 60px;
 }
 
+.navigation {
+}
+
 .menu {
+    position: relative;
     display: flex;
     justify-content: center;
     gap: 25px;
@@ -72,6 +74,10 @@
     position: relative;
 }
 
+.ri-menu-line {
+    display: none;
+}
+
 .badge {
     position: absolute;
     bottom: 70%;
@@ -94,4 +100,69 @@
 
 .mobile-menu i {
     font-size: 18px;
+}
+
+.sticky__header{
+    width: 100%;
+    height: 70px;
+    list-style: 70px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    box-shadow: 3px 3px 8px -3px #ddd;
+    background: #fff;
+}
+
+@media only screen and (max-width:768px) {
+    .ri-menu-line{
+        display: block;
+    }
+
+    .navigation {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #00000052;
+        z-index: 999;
+        display: none;
+    }
+
+    .menu {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 250px;
+        height: 100%;
+        background: #fff;
+        z-index: 999999;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    .nav-wrapper{
+        padding: 5px 20px;
+    }
+
+    .nav-icons span {
+        font-size: 25px;
+        cursor: pointer;
+    }
+
+    .active__menu {
+        display: block;
+    }
+
+    .mobile__menu {
+        display: block;
+    }
+
+    .logo .name-shop{
+        font-size: 1rem;
+    }
 }
