--- a/src/styles/productcard.css
+++ b/src/styles/productcard.css
@@ -34,7 +34,7 @@
     gap: 10px;
 }
 
-.product-card_bottom {
+.product-card_bottom { 
     display: flex;
     justify-content: space-between;
 }
@@ -42,14 +42,14 @@
 .buy__item {
     padding: 8px 10px;
     background: #000;
-    border-radius: 50%;
+    border-radius: 5px;
     color: #fff;
 }
 
 .buy__item:hover {
     padding: 8px 10px;
     background: rgb(233, 129, 10);
-    border-radius: 50%;
+    border-radius: 5px;
     color: #000;
     scale: 1.2;
 }
