--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,13 +7,14 @@
     height: 70px;
     background: var(--card-bg-01);
     position: fixed;
-    z-index:999;  
+    z-index:999;
+    box-shadow: 1px 8px 23px -5px rgba(0, 110, 195, 0.24);
 }
 
 .nav-wrapper{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    display: flex ;
+    align-items: center ;
+    justify-content: space-between ;
     padding: 15px 60px;
 }
 
@@ -126,7 +127,7 @@
         width: 100%;
         height: 100%;
         background: #00000052;
-        z-index: 999;
+        z-index: 9999;
         display: none;
     }
 
@@ -147,6 +148,9 @@
 
     .nav-wrapper{
         padding: 5px 20px;
+
+        height:70px;
+        
     }
 
     .nav-icons span {
@@ -158,11 +162,22 @@
         display: block;
     }
 
+    .logo h4 {
+        color: var(--primary-color);
+        font-size: 18px;
+        padding-top:50px;
+    }
+
     .mobile__menu {
         display: block;
     }
 
     .logo .name-shop{
         font-size: 1rem;
+    }
+    header {
+        width:100%;
+        height:60px;
+        line-height:60px;
     }
 }
