--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,6 +7,7 @@
 
 .hero-content h2 {
     color: var(--primary-color);
+    width:480px;
     font-size: 2.5rem;
     font-weight: 600;
     margin: 20px 0px;
@@ -54,6 +55,16 @@
     width: 0px;
   }
 
+  
+  .ProductList {
+    display: flex;
+    flex-wrap:wrap;
+    gap: 13px;
+    margin:50px;
+    
+
+}
+
   @media only screen  and (max-width:768px){
     .padding-default {
         padding:  20px 40px;
@@ -90,7 +101,10 @@
     }
 
     .product-item {
-        /* border: 1px solid rgba(56, 56, 56, 0.323); */
-        border-radius: 15px;
+        box-shadow: 0px 2px 13px -3px rgba(0, 0, 0, 0.26);
+    }
+
+    .product-item {
+        gap:10px;
     }
 }
