--- a/src/styles/productcard.css
+++ b/src/styles/productcard.css
@@ -2,6 +2,7 @@
 .ProductList {
     display: flex;
     justify-content: space-between;
+
 }
 
 .product-img img{
@@ -13,12 +14,21 @@
     scale: 1.1;
 }
 .product-item {
+    min-width:250px;
+    width:250px;
     padding: 20px;
     display: flex;
     flex-direction: column;
     gap: 15px;
     cursor: pointer;
+    /* box-shadow: 0px 2px 13px -3px rgba(0, 0, 0, 0.26); */
+    border-radius:10px;
 }
+
+.product-item:hover {
+    box-shadow: 0px 2px 13px -3px rgba(0, 0, 0, 0.26);
+}
+
 
 
 .product_name {
