--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,7 +1,7 @@
 
 .Hero {
     display: flex;
-    align-items: center;
+    margin: 0 auto;
     background: var(--hero-bg);
 }
 
@@ -34,6 +34,7 @@
 .Services {
     display: flex;
     width: 100%;
+    justify-content: space-around;
     gap: 30px;
 }
 
@@ -102,6 +103,13 @@
 
     .product-item {
         box-shadow: 0px 2px 13px -3px rgba(0, 0, 0, 0.26);
+    }
+
+    .service-item:hover {
+        scale: 1.1;
+    }
+    .service-item:hover {
+        transform: translateY(0px);
     }
 
     .product-item {
