--- a/src/styles/productcard.css
+++ b/src/styles/productcard.css
@@ -1,8 +1,9 @@
 
 .ProductList {
-    display: flex;
+    display: flex !important;
     justify-content: space-between;
-
+    align-items: center;
+    gap: 25px  !important;
 }
 
 .product-img img{
@@ -19,7 +20,7 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+
     cursor: pointer;
     /* box-shadow: 0px 2px 13px -3px rgba(0, 0, 0, 0.26); */
     border-radius:10px;
